# meego-office

./: .gitignore  CMCanvasControllerDeclarative.cpp  CMCanvasControllerDeclarative.h  CMCanvasInputProxy.cpp  CMCanvasInputProxy.h  CMDocumentListModel.cpp  CMDocumentListModel.h  CMDocumentThumbnailListModel.cpp  CMDocumentThumbnailListModel.h  CMFileSystemModel.cpp  CMFileSystemModel.h  CMIconImageProvider.cpp  CMIconImageProvider.h  CMMainWindow.cpp  CMMainWindow.h  CMPageThumbnailProvider.cpp  CMPageThumbnailProvider.h  CMProcessInputInterface.h  CMProgressProxy.cpp  CMProgressProxy.h  CMRecentFilesModel.cpp  CMRecentFilesModel.h  CMSearchingInterface.h  CMTextCursor.cpp  CMTextCursor.h  CMTextSelection.cpp  CMTextSelection.h  CMViewStack.cpp  CMViewStack.h  CMakeLists.txt  CMakeLists.txt.user.2.2pre5  README.MeeGo  VERSION  calligramobile_export.h  intel-documents.desktop  intel-office-suite.desktop  main.cpp  meego-office-suite.desktop  qt470support.sh
cmake/: FindMeegoLocale.cmake  FindMeegoQmlLauncher.cmake  FindQtMobility.cmake  FindQtSparql.cmake
components/: AboutDialog.qml  Action.qml  ActionBar.qml  Button.qml  DocumentThumbnailList.qml  Menu.qml  OpenFileDialog.qml  OpenFileView.qml  ProgressBar.qml  ScreenOrientation.qml  TitleBar.qml  ToolButton.qml  ZoomControl.qml  qmldir
pdf/: PDFCanvas.cpp  PDFCanvas.h  PDFCanvasController.cpp  PDFCanvasController.h  PDFDocument.cpp  PDFDocument.h  PDFPage.cpp  PDFPage.h  PDFProcessManager.cpp  PDFProcessManager.h  PDFSearch.cpp  PDFSearch.h  PDFSelection.cpp  PDFSelection.h  PDFServerConfig.h.in
pdfserver/: CMakeLists.txt  PdfDocument.cpp  PdfDocument.h  PdfDocumentCache.cpp  PdfDocumentCache.h  PdfReply.cpp  PdfReply.h  PdfServer.cpp  PdfServer.h  PdfServerThread.cpp  PdfServerThread.h  main.cpp  qtlocalpeer.cpp  qtlocalpeer.h  qtlockedfile.cpp  qtlockedfile.h  qtsinglecoreapplication.cpp  qtsinglecoreapplication.h
pdfserver/tests/: CMakeLists.txt  PdfServerTest.cpp  PdfServerTest.h
shared/: CanvasControllerDeclarative.cpp  CanvasControllerDeclarative.h  CanvasInputProxy.cpp  CanvasInputProxy.h  DocumentListModel.cpp  DocumentListModel.h  DocumentThumbnailListModel.cpp  DocumentThumbnailListModel.h  IconImageProvider.cpp  IconImageProvider.h  MainWindow.cpp  MainWindow.h  PageThumbnailProvider.cpp  PageThumbnailProvider.h  ProcessInputInterface.h  ProgressProxy.cpp  ProgressProxy.h  SearchingInterface.h  TextSelection.cpp  TextSelection.h
stage/: CMStageCanvas.cpp  CMStageCanvas.h  CMStageDeclarativeView.cpp  CMStageDeclarativeView.h  CMakeLists.txt  StageCanvas.cpp  StageCanvas.h  StageDeclarativeView.cpp  StageDeclarativeView.h  calligrastage_mobile.desktop  main.cpp
stage/ui/: Stage.qml  StageView.qml
tables/: CMTablesCanvas.cpp  CMTablesCanvas.h  CMTablesHeader.cpp  CMTablesHeader.h  CMakeLists.txt  TablesCanvas.cpp  TablesCanvas.h  TablesHeader.cpp  TablesHeader.h  calligratables_mobile.desktop  main.cpp
tables/ui/: TableView.qml  Tables.qml
ui/: AboutDialog.qml  AllDocumentsPage.qml  DocumentPicker.qml  DocumentThumbnailList.qml  DocumentsPage.qml  MainPage.qml  Marker.qml  SearchBar.qml  SearchToolBar.qml  Settings.qml  TextCopiedToClipboardMessage.qml  ViewDocumentPage.qml  ViewLoader.qml  ViewToolBar.qml  ZoomControl.qml  main.qml
words/: CMWordsCanvas.cpp  CMWordsCanvas.h  CMakeLists.txt  WordsCanvas.cpp  WordsCanvas.h  calligrawords_mobile.desktop  main.cpp
words/ui/: Words.qml  WordsView.qml
